<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_save_session"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.max.suspensionmonitor.SaveSessionActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_name_hint"
            android:layout_height="wrap_content"
            android:id="@+id/nameTxt"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_shock_fork"
            android:layout_height="wrap_content"
            android:id="@+id/forkTxt"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_hrebound"
            android:layout_height="wrap_content"
            android:id="@+id/hrTxt"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_lrebound"
            android:id="@+id/lrTxt"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_hcompress"
            android:id="@+id/hcTxt"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />


        <EditText
            android:layout_weight="3"
            android:hint="@string/session_lcompress"
            android:id="@+id/lcTxt"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />

        <EditText
            android:layout_weight="3"
            android:hint="@string/session_pressure"
            android:id="@+id/presTxt"
            android:layout_height="wrap_content"
            android:imeOptions="flagNoExtractUi"
            android:layout_width="match_parent" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/session_save_btn"
            android:onClick="buttonSaveClick"
            android:id="@+id/saveBtn"/>
    </LinearLayout>

</RelativeLayout>
